@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-22T01:04:07Z",
+  "timestamp" : "2024-02-22T08:18:42Z",
   "count_outdated" : 1596,
   "uniques_outdated" : 873,
-  "count" : 1602,
-  "uniques" : 877,
+  "count" : 1603,
+  "uniques" : 878,
   "clones" : [
     {
       "timestamp": "2024-02-08T00:00:00Z",
@@ -37,6 +37,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-02-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
