@@ -1,3 +1,12 @@
+2024-02-22T08:18:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8001413509 # 139
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-22
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 873 1596 / 877 1602
+* notice: next accum: outdated-unq outdated-all / unq all: 873 1596 / 878 1603
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-02-22]
+
 2024-02-22T01:04:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7997865049 # 138
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-22
